syntax = "proto3";
package transaction;

import "account.proto";
import "digest.proto";

// Represents a transaction ID.
message TransactionId {
    // The transaction ID.
    digest.Digest id = 1;
}

// Represents a transaction summary.
message TransactionSummary {
    // A unique 32-byte identifier of a transaction.
    TransactionId transaction_id = 1;

    // The block number in which the transaction was executed.
    fixed32 block_num = 2;

    // The ID of the account affected by the transaction.
    account.AccountId account_id = 3;
}

enum TransactionStatus {
    COMMITED = 0;
    FAILED = 1;
}
